--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clearbuild": "rm -r -f build",
     "deploy:prod": "aws s3 sync build/ s3://tictactoe.dblive.io/ --delete --acl public-read --profile mike && aws cloudfront create-invalidation --distribution-id E1QUVLFQ197JC6 --profile mike --paths / \"/*\"",
     "predeploy:prod": "npm run build",
+    "prestart": "npm run scss",
     "scss": "node-sass src/scss -o src",
     "scss:watch": "node-sass --watch src/scss -o src",
     "start": "react-scripts start",
